syntax = "proto3";

option go_package = "api;reviews";

service Reviews {
    rpc CreateReview (CreateReviewRequest) returns (CreateReviewResponse);
    rpc GetRating (GetRatingRequest) returns (GetRatingResponse);
}

message CreateReviewRequest {
    int64 user_id = 1;
    int64 item_id = 2;
    int32 score = 3;
    string message = 4;
}

message CreateReviewResponse {
    int64 id = 1;
}

message GetRatingRequest {
    int64 item_id = 1;
}

message GetRatingResponse {
    float rating = 1;
}
